# SFSL

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
Backend/: BytecodeGenerator.cpp  BytecodeGenerator.h
Backend/Bytecode/: Bytecode.cpp  Bytecode.h
Compiler/AST/Nodes/: ASTNode.cpp  ASTNode.h  Declarations.cpp  Declarations.h  Expressions.cpp  Expressions.h  Identifier.cpp  Identifier.h  KindExpressions.cpp  (+15 more)
Compiler/Analyser/: KindChecking.cpp  KindChecking.h  NameAnalysis.cpp  NameAnalysis.h  TypeChecking.cpp  TypeChecking.h
Compiler/Backend/: BytecodeGenerator.cpp  BytecodeGenerator.h  UserDataAssignment.cpp  UserDataAssignment.h
Compiler/CodeGen/: CodeGenOutput.cpp  CodeGenOutput.h  CodeGenerator.cpp  CodeGenerator.h
Compiler/Common/: CompilationContext.cpp  CompilationContext.h  ManageableUserData.h  ManageableWrapper.cpp  ManageableWrapper.h  MemoryManageable.cpp  MemoryManageable.h  MemoryManageable.h.autosave  MemoryManager.cpp  MemoryManager.h  MemoryManager.h.autosave  Positionnable.cpp  Positionnable.h  Reporter.cpp  Reporter.h
Compiler/Kinds/: Kinds.cpp  Kinds.h
Compiler/Lexer/: BufferedInputSource.h  BufferedSFSLSource.cpp  BufferedSFSLSource.h  InputSource.cpp  InputSource.h  InputSourceName.cpp  InputSourceName.h  Lexer.cpp  Lexer.h  SFSLSource.cpp  SFSLSource.h  SFSLSourceName.cpp  SFSLSourceName.h
Compiler/Parser/: Parser.cpp  Parser.h
Compiler/Types/: Types.cpp  Types.h
Doc/html/: _a_s_t_kind_creator_8h_source.html  _a_s_t_node_8h_source.html  _a_s_t_printer_8h_source.html  _a_s_t_type_creator_8h_source.html  _a_s_t_type_identifier_8h_source.html  _a_s_t_visitor_8h_source.html  _a_s_t_visitor_template_8h_source.html  _buffered_input_source_8h_source.html  _bytecode_8h_source.html  _code_generator_8h_source.html  _compilation_context_8h_source.html  _declarations_8h_source.html  _expressions_8h_source.html  _identifier_8cpp_source.html  _identifier_8h_source.html  _input_source_8h_source.html  _keyword_8cpp_source.html  _keyword_8h_source.html  _lexer_8cpp_source.html  _lexer_8h_source.html  _litterals_8cpp_source.html  _litterals_8h_source.html  _manageable_user_data_8h_source.html  _manageable_wrapper_8h_source.html  _memory_manageable_8cpp_source.html  _memory_manageable_8h_source.html  _memory_manager_8cpp_source.html  _memory_manager_8h_source.html  _name_analysis_8h_source.html  _operators_8cpp_source.html  _operators_8h_source.html  _others_8cpp_source.html  _others_8h_source.html  _parser_8h_source.html  _positionnable_8cpp_source.html  _positionnable_8h_source.html  _program_8h_source.html  _r_e_a_d_m_e_8md_source.html  _reporter_8h_source.html  _s_f_s_l_source_8cpp_source.html  (+236 more)
Utils/: Utils.cpp  Utils.h
doc/: Doxyfile
doc/html/: _a_s_t_assignment_checker_8h_source.html  _a_s_t_symbol_extractor_8h_source.html  _a_s_t_visitor_8h_source.html  _bytecode_generator_8h_source.html  _code_gen_output_8h_source.html  _compilation_context_8h_source.html  _declarations_8h_source.html  _identifier_8h_source.html  _input_source_name_8h_source.html  _keyword_8h_source.html  _kind_checking_8h_source.html  _kind_expressions_8h_source.html  _kinds_8h_source.html  _lexer_8h_source.html  _memory_manager_8h_source.html  _others_8h_source.html  _parser_8h_source.html  _positionnable_8h_source.html  _program_8h_source.html  _reporter_8h_source.html  _scoped_8h_source.html  _symbol_resolver_8h_source.html  _symbolic_8h_source.html  _symbols_8h_source.html  _token_8h_source.html  _type_checking_8h_source.html  _type_expressions_8h_source.html  _types_8h_source.html  _utils_8h_source.html  classsfsl_1_1ast_1_1_a_s_t_assignment_checker.html  classsfsl_1_1ast_1_1_a_s_t_default_type_from_kind_creator-members.html  classsfsl_1_1ast_1_1_a_s_t_kind_creator.html  classsfsl_1_1ast_1_1_a_s_t_node.html  classsfsl_1_1ast_1_1_a_s_t_printer-members.html  classsfsl_1_1ast_1_1_a_s_t_type_creator-members.html  classsfsl_1_1ast_1_1_a_s_t_type_identifier-members.html  classsfsl_1_1ast_1_1_a_s_t_type_identifier.html  classsfsl_1_1ast_1_1_a_s_t_visitor.html  classsfsl_1_1ast_1_1_binary_expression-members.html  classsfsl_1_1ast_1_1_binary_expression.html  (+168 more)
include/: sfsl.h
include/api/: AbstractOutputCollector.h  AbstractPrimitiveNamer.h  AbstractReporter.h  ClassBuilder.h  Compiler.h  CompilerConfig.h  CompilerOption.h  Errors.h  IOPhaseObject.h  Module.h  Phase.h  PhaseContext.h  Pipeline.h  PrimitiveNamer.h  ProgramBuilder.h  SetVisibilities.h  StandartOutputCollector.h  StandartPrimitiveNamer.h  StandartReporter.h  Type.h  TypeConstructorBuilder.h  UnsetVisibilities.h  set_visibilities.h  unset_visibilities.h  visibilities.h
include/headers/: visibilities.h
includes/headers/: visibilities.h
samples/: HigherKindedTypes.sfsl
samples/API/: SamplePhase.cpp  SamplePhases.cpp  main.cpp
samples/TypeSystem/: ChurchBooleans.sfsl  ChurchNumerals.sfsl  HigherKindedTypes.sfsl
src/: apimain.cpp  main.cpp
src/Common/: AbstractPrimitiveNamer.cpp  AbstractPrimitiveNamer.h  PrimitiveNamer.cpp  PrimitiveNamer.h
src/Interface/: Compiler.cpp  CompilerConfig.cpp  CompilerOption.cpp  Errors.cpp  IOPhaseObject.cpp  IOPhaseObject.h  ModuleContainer.cpp  ModuleContainer.h  OutputCollector.cpp  Phase.cpp  Phase.h  PhaseContext.cpp  PhaseGraph.cpp  PhaseGraph.h  Pipeline.cpp  Pipeline.h  PrimitiveNamer.cpp  Reporter.cpp  ReporterAdapter.cpp  ReporterAdapter.h  StandartPrimitiveNamer.cpp
src/Utils/: TakeSecondIterator.cpp  TakeSecondIterator.h  Utils.h
stdlib/: stdlib.cpp
tests/: AbstractTest.cpp  AbstractTest.h  AbstractTestLogger.cpp  AbstractTestLogger.h  CanSubtypeTests.cpp  CanSubtypeTests.h  CapturesTest.cpp  CapturesTest.h  CompilationTest.cpp  CompilationTest.h  FileSystemTestGenerator.cpp  FileSystemTestGenerator.h  PhaseGraphTests.cpp  PhaseGraphTests.h  SymbolicTest.cpp  SymbolicTest.h  TestRunner.cpp  TestRunner.h  TestSuite.cpp  TestSuite.h  TestUtils.cpp  TestUtils.h  main.cpp
tests/Visitors/: CapturesChecker.cpp  CapturesChecker.h  SymbolAssertionsChecker.cpp  SymbolAssertionsChecker.h
tools/Completer/: ScopeReporter.cpp  ScopeReporter.h  main.cpp
(+547 files in other folders)
